# Smart-Warehouse-Enterprise-Simulator

./: .gitignore  Project Report.md  README.md  git-add-errors.txt  plan.md  push-output.txt  pyproject.toml  todo.md
.github/workflows/: README.md  ci.yml
__MACOSX/smart_warehouse/: ._config.py
config/: logging.yaml  settings.yaml
config/environments/: dev.yaml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: README.md  architecture.md  roadmap.md
infra/: terraform.tf
scripts/: bootstrap.ps1
scripts/database/: migrate.py
scripts/python/: seed_data.py
smart_warehouse/: READ.me  README.md  __init__.py  config.py  main.py  mqtt_manager.py  pathfinding.py  robot_agent.py  warehouse_simulator.py
smart_warehouse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
smart_warehouse/analytics/: logging.py  metrics.py
smart_warehouse/core/: events.py  models.py  planner.py  repository.py  scheduler.py
smart_warehouse/enterprise/: README.md  notes.txt
smart_warehouse/observability/: __init__.py  logging.py  metrics.py  tracing.py
smart_warehouse/persistence/: __init__.py  database.py  memory.py  models.py  repository.py
smart_warehouse/server/: app.py  dependencies.py
smart_warehouse/services/: __init__.py  api.py  health.py  messaging.py  reservations.py  scenario_engine.py  scheduler.py  simulation.py
smart_warehouse/ui/: webapp.py
tests/: test_api_endpoints.py  test_grpc.py  test_health.py  test_reservations.py  test_scheduler.py  test_settings.py  test_simulation_service.py
tools/: check_interval.py
(+40 files in other folders)
